# sizelize

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json
.github/workflows/: build.yml
npm/: binary.js  get_binary.js  run.js  scripts.js
samples/: package.json
src/: compressor.rs  config_reader.rs  config_struct.rs  main.rs  messages.rs  scanner.rs  test_file.rs
