[package]
name = "sizelize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
glob = "0.3.0"
flate2 = "1.0.22"
byte-unit = "4.0.14"
colored = "2.0.0"
exitcode = "1.1.2"
structopt = "0.3.26"