[package]
name = "sizelize"
version = "0.1.11"
edition = "2021"

authors = ["Lior Heber Knimach <lior.heber@skai.io> (www.skai.io)"]
repository = "https://github.com/skai-oss/sizelize"

readme = "README.md"
license = "MIT"


[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
glob = "0.3.0"
flate2 = "1.0.22"
byte-unit = "4.0.14"
colored = "2.0.0"
structopt = "0.3.26"